# vibetuner

./: .dockerignore  .emdash.json  .gitignore  .gitignore.template  .mise.toml  .pre-commit-config.yaml  .prekignore  .release-please-config.json  .release-please-manifest.json  .ruff.toml  .rumdl.toml  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_COMMANDS.md  CONTRIBUTING.md  DEVELOPMENT.md  DOT.dockerignore  DOT.mise.toml  Dockerfile  LICENSE  OPEN_SOURCE_FEASIBILITY.md  OPEN_SOURCE_REPORT.md  README.md  SCAFFOLDING_OVERVIEW.md  TODO.md  babel.cfg  compose.dev.yml  compose.prod.yml  compose.yml  conductor.json  copier.yml  development-guide.html  djlint.toml  dprint.json  dummy.txt  justfile  llms-full.txt  llms.txt  (+13 more)
template/: .dockerignore  .gitignore  .gitignore.j2  .gitignore.jinja  .markdownlint.json  .mcp.json.j2  .mise.toml  .mise.toml.j2  .pre-commit-config.yaml  .prettierignore  .ruff.toml  .rumdl.toml  .taplo.toml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  babel.cfg  base.justfile  compose.dev.yml  compose.dev.yml.j2  compose.dev.yml.jinja  compose.prod.yml  compose.prod.yml.j2  compose.prod.yml.jinja  djlint.toml  i18n.json.jinja  justfile  justfile.jinja  package.json  package.json5  pyproject-base.toml  pyproject.toml  pyproject.toml.j2  pyproject.toml.jinja  pyrightconfig.json  start.sh  start.sh.j2  start.sh.jinja  (+3 more)
template/.claude/: settings.json  settings.local.json  settings.local.json.j2
template/.claude/agents/: beanie-model-architect.md  beanie-model-architect.md.j2  deployment-manager.md  fastapi-backend-developer.md  fastapi-backend-developer.md.j2  i18n-specialist.md  jinja-htmx-frontend.md  tech-pm-todo-manager.md  web-app-runner.md
template/.claude/commands/: auth-test.md  commit-all.md  commit.md  deploy.md  dev.md  format.md  help.md  readme.md  release-minor.md  release-patch.md  update-deps.md  update-scaffolding.md
template/.claude/hooks/: format-files.sh
template/frontend/: app.css  esbuild.js
template/frontend/templates/: auth.html.jinja  email_login.html.jinja  email_sent.html.jinja
template/scaffolding/: cf.py
template/src/: app
template/src/app/: AGENTS.md  config.py
template/src/core/: cli.py  config.py  context.py  mongo.py  paths.py  templates.py
template/src/vibetuner/: config.py  paths.py
template/src/{{ project_name }}/: __init__.py  __main__.py  _cli.py  _config.py  _context.py  _logging.py  _paths.py  _project.py  _project.py.j2  _project.py.jinja  cli.py  context.py  mongo.py  time.py
template/src/{{ project_slug }}/: __init__.py  _config.py  context.py  mongo.py  mongo_types.py  templates.py
template/templates/email/: AGENTS.md
template/templates/frontend/: AGENTS.md  CLAUDE.md  email_sent.html.jinja  login.html.jinja
template/templates/markdown/: AGENTS.md
vibetuner-py/: AGENTS.md  CHANGELOG.md  PUBLISH.md  README.md  babel.cfg  pyproject.toml  pytest.ini  ty.toml
vibetuner-py/src/vibetuner/: __init__.py  __main__.py  app_config.py  cache.py  config.py  context.py  crud.py  crypto.py  debug_signing.py  decorators.py  extras.py  htmx.py  i18n.py  importer.py  loader.py  logging.py  migrations.py  mongo.py  paths.py  provider.py  pyproject.py  ratelimit.py  redis.py  rendering.py  runtime_config.py  sqlmodel.py  sse.py  templates.py  testing.py  theming.py  utils.py  versioning.py
vibetuner-py/tests/: __init__.py  conftest.py
vibetuner-py/tests/integration/: conftest.py  test_vibetuner_db_real.py
vibetuner-py/tests/unit/: __init__.py  test_adjust_lang_cookie_middleware.py  test_auth_logout.py  test_auth_rate_limit.py  test_blob_service.py  test_brand_settings.py  test_cache.py  test_cache_control.py  test_capability_detection.py  test_circular_import.py  test_config.py  test_config_cli.py  test_config_entry_encryption.py  test_context.py  test_core_templates_path_cli.py  test_crypto.py  test_crypto_cli.py  test_db.py  test_debug_auth.py  test_debug_config_detail.py  test_debug_impersonation.py  test_debug_signing.py  test_docs_skeleton_block_references.py  test_doctor.py  test_email_service.py  test_env_resolution.py  test_framework_catalogs.py  test_health_routes.py  test_htmx_helpers.py  test_i18n.py  test_lang_prefix_middleware.py  test_loader.py  test_locale_middleware_order.py  test_locale_selector_fn.py  test_locale_selectors.py  test_localized_router.py  test_login_db_apps.py  test_mixins.py  test_mongo_init_warning.py  test_oauth_account.py  (+47 more)
vibetuner-template/: .dockerignore  .emdash.json  .env.j2  .gitignore  .mise.toml  .mise.toml.j2  .pre-commit-config.yaml  .release-please-config.json  .ruff.toml  .rumdl.toml  .taplo.toml  .worktreeinclude  AGENTS.md  Dockerfile  MIGRATION-TO-TUNE-PY.md  README.md.j2  babel.cfg  base.justfile  compose.dev.yml  compose.prod.yml  conductor.json  config.css  config.js  djlint.toml  dprint.json  justfile  opencode.json  package.json  pyproject.toml  pyproject.toml.j2  renovate.json  start.sh
vibetuner-template/.claude/: settings.json
vibetuner-template/.claude/agents/: jinja-htmx-frontend.md
vibetuner-template/.claude/commands/: help.md  issue.md  pr-create.md  readme.md  update-scaffolding.md
vibetuner-template/.claude/hooks/: format-files.sh
vibetuner-template/.claude/rules/: background-tasks.md  configuration.md  deployment.md  development.md  frontend.md  localization.md  testing.md
vibetuner-template/.github/: dependabot.yml
vibetuner-template/.github/workflows/: claude-code-review.yml  docker.yml  docker.yml.j2  release.yml
vibetuner-template/.hooks/: conductor-setup.sh  emdash-setup.sh  workspace-setup.sh  worktree-create.sh
vibetuner-template/.justfiles/: cicd.justfile  deps.justfile  expose.justfile  formatting.justfile  gitflow.justfile  helpers.justfile  i18n.justfile  linting.justfile  localdev.justfile  scaffolding.justfile  testing.justfile  versioning.justfile  worktrees.justfile
vibetuner-template/.opencode/command/: issue.md  pr-create.md
vibetuner-template/assets/: AGENTS.md
vibetuner-template/scripts/: mongo-init.js
vibetuner-template/worktrees/: .placeholder
(+397 files in other folders)
