[project]
name = "alibey"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncer>=0.0.8",
    "beanie[zstd]>=1.29.0",
    "cachetools>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "jinja2-fragments>=1.8.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-slugify[unidecode]>=8.0.4",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "typer-slim[standard]>=0.15.2",
    "uvicorn>=0.34.1",
]

[project.scripts]
alibey = "alibey.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "ty>=0.0.0a8",
    "types-cachetools>=5.5.0.20240820",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/alibey/_version.py"
template = '''
version = "{version}"
'''
