[project]
name = "atl"
requires-python = ">=3.13"
version = "0.0.1"
dependencies = ["prototuner"]

[dependency-groups]
dev = ["prototuner[dev]"]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["vibetuner", "app"]

[tool.uv.sources]
prototuner = { git = "https://github.com/alltuner/prototuner" }
