[project]
name = "vibetuner"
description = "Core Python framework and blessed dependencies for production-ready FastAPI + MongoDB + HTMX projects"
version = "10.10.0"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "All Tuner Labs, S.L." }]
keywords = ["fastapi", "mongodb", "htmx", "web-framework", "scaffolding", "oauth", "background-jobs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  # These are the base dependencies of AllTuner's blessed stack
  "aioboto3>=15.5.0",
  "arel>=0.4.0",
  "asyncer>=0.0.17",
  "authlib>=1.7.2",
  "beanie[zstd]>=2.1.0",
  "click>=8.3.3",
  "copier>=9.15.0",
  "cryptography>=48.0.0",
  "email-validator>=2.3.0",
  "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
  "granian[pname]>=2.7.4",
  "mailjet-rest>=1.6.0",
  "httpx[http2]>=0.28.1",
  "itsdangerous>=2.2.0",
  "loguru>=0.7.3",
  "pydantic[email]>=2.13.3",
  "resend>=2.30.0",
  "pydantic-extra-types[pycountry]>=2.11.1",
  "pydantic-settings>=2.14.0",
  "pyyaml>=6.0.3",
  "redis[hiredis]>=7.4.0",
  "rich>=15.0.0",
  "slowapi>=0.1.9",
  "starlette-babel>=1.1.0",
  "starlette-context>=0.5.1",
  "starlette-htmx>=0.1.1",
  "streaq[web]>=6.4.0,<7.0.0",
  "typer>=0.25.1",
  "deprecated>=1.3.1",
  "greenlet>=3.5.0",
  "sqlmodel>=0.0.38",
  "gitpython>=3.1.50",
]

[project.scripts]
vibetuner = "vibetuner.cli:app"

[project.urls]
Homepage = "https://vibetuner.alltuner.com/"
Documentation = "https://vibetuner.alltuner.com/"
Repository = "https://github.com/alltuner/vibetuner"
Issues = "https://github.com/alltuner/vibetuner/issues"
Changelog = "https://github.com/alltuner/vibetuner/blob/main/CHANGELOG.md"

[project.entry-points."pytest11"]
vibetuner = "vibetuner.testing"

[project.optional-dependencies]
dev = [
  # These are the development dependencies of AllTuner's blessed stack
  "babel>=2.18.0",
  "cloudflare>=5.0.0",
  "djlint>=1.36.4",
  "granian[pname,reload]>=2.7.4",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.12",
  "testcontainers[mongodb]>=4.14.2",
  "rumdl>=0.1.89",
  "semver>=3.0.4",
  "taplo>=0.9.3",
  "ty>=0.0.34",
  "types-aioboto3[s3]>=15.5.0",
  "types-authlib>=1.6.11.20260418",
  "types-pyyaml>=6.0.12.20260408",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Exclude development documentation files from the built package
# These files are for repository contributors, not end users
wheel-exclude = ["**/AGENTS.md", "**/CLAUDE.md"]
